Fix: Channel name overflows on Google Chrome

--- a/web/static/web/scss/channel_base.scss
+++ b/web/static/web/scss/channel_base.scss
@@ -64,6 +64,7 @@
 			color: #fff;
 			position: relative;
 			width: max-content;
+			white-space: nowrap;
 
 			&__checkmark {
 				font-size: 1rem;
